--- a/index.html
+++ b/index.html
@@ -19,30 +19,56 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="angular2---ckeditor-component" class="anchor" href="#angular2---ckeditor-component" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Angular2 - CKEditor component</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Use the <a href="http://ckeditor.com/">CKEditor (4.x)</a> wysiwyg in your Angular2 application.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a name="install"></a>Installation</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+<li>Include CKEditor javascript files in your application</li>
+<li>Install ng2-ckeditor
+
+<ul>
+<li>JSPM : <code>jspm install ng2-ckeditor=github:chymz/ng2-ckeditor</code>
+</li>
+<li>NPM : <code>npm install ng2-ckeditor</code>
+</li>
+</ul>
+</li>
+</ul>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="sample-es6" class="anchor" href="#sample-es6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a name="sample"></a>Sample (ES6)</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<div class="highlight highlight-source-js"><pre><span class="pl-k">import</span> {<span class="pl-smi">Component</span>} <span class="pl-k">from</span> <span class="pl-s"><span class="pl-pds">'</span>angular2/core<span class="pl-pds">'</span></span>;
+<span class="pl-k">import</span> {<span class="pl-smi">CKEditor</span>} <span class="pl-k">from</span> <span class="pl-s"><span class="pl-pds">'</span>ng2-ckeditor<span class="pl-pds">'</span></span>;
+
+@<span class="pl-en">Component</span>({
+  selector<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>sample<span class="pl-pds">'</span></span>,
+  directives<span class="pl-k">:</span> [CKEditor],
+  template<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">`</span>&lt;ckeditor [(ngModel)]="ckeditorContent" [config]="{uiColor: '#99000'}"&gt;&lt;/ckeditor&gt;<span class="pl-pds">`</span></span>
+})
+<span class="pl-k">export</span> <span class="pl-k">class</span> <span class="pl-en">Sample</span>{
+  <span class="pl-en">constructor</span>(){
+    <span class="pl-v">this</span>.<span class="pl-smi">ckeditorContent</span> <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">`</span>&lt;p&gt;My HTML&lt;/p&gt;<span class="pl-pds">`</span></span>;
+  }
+}</pre></div>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="configuration" class="anchor" href="#configuration" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a name="config"></a>Configuration</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li>config : The configuration object for CKEditor see <a href="http://docs.ckeditor.com/#!/api/CKEDITOR.config-cfg-fileTools_defaultFileName">http://docs.ckeditor.com/#!/api/CKEDITOR.config-cfg-fileTools_defaultFileName</a>
+</li>
+<li>configFile : You can use a javacsript file to configure your CKEditor (Only work with SystemJS)</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre><span class="pl-k">export</span> <span class="pl-k">var</span> config <span class="pl-k">=</span> {
+    uiColor<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>#990000<span class="pl-pds">'</span></span>
+}</pre></div>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/chymz/ng2-ckeditor">ng2-ckeditor</a> is maintained by <a href="https://github.com/chymz">chymz</a>.</span>
